integrated resemblejs into 2 API's, will do more cleanup soon.
