# app/controllers/screenshot.controller.js
@@ -1,8 +1,11 @@
 const { validationResult } = require('express-validator');
 const imageThumbnail = require('image-thumbnail');
 const fs = require('fs');
+const fsPromises = require('fs').promises;
 const path = require('path');
 const mongoose = require('mongoose');
+const { compare } = require('resemblejs');
+const compareImages = require('resemblejs/compareImages');
 
 const Screenshot = require('../models/screenshot.js');
 const Build = require('../models/build.js');
@@ -58,23 +61,39 @@ exports.createFail = (error, req, res) => {
 };
 
 exports.findAll = (req, res) => {
-  const { buildId } = req.query;
-  return Build.findById({ _id: buildId })
-    .then((buildFound) => {
-      if (!buildFound) {
-        const error = new Error(`No build found with id ${buildId}`);
-        error.status = 404;
-        return Promise.reject(error);
-      }
-      return Screenshot.find({ build: mongoose.Types.ObjectId(buildId) })
-        .then((screenshots) => {
-          res.send(screenshots);
-        }).catch((err) => {
-          res.status(500).send({
-            message: err.message || 'Some error occurred while retrieving screenshots.',
-          });
+  const { buildId, view } = req.query;
+  const limit = parseInt(req.query.limit, 10) || 10;
+  const skip = parseInt(req.query.skip, 10) || 0;
+
+  if (buildId) {
+    return Build.findById({ _id: buildId })
+      .then((buildFound) => {
+        if (!buildFound) {
+          const error = new Error(`No build found with id ${buildId}`);
+          error.status = 404;
+          return Promise.reject(error);
+        }
+        return Screenshot.find(
+          { build: mongoose.Types.ObjectId(buildId), view }, null, { limit, skip },
+        );
+      })
+      .then((screenshots) => {
+        res.send(screenshots);
+      }).catch((err) => {
+        res.status(500).send({
+          message: err.message || 'Some error occurred while retrieving screenshots.',
         });
+      });
+  }
+  return Screenshot.find(
+    { view }, null, { limit, skip },
+  ).then((screenshots) => {
+    res.send(screenshots);
+  }).catch((err) => {
+    res.status(500).send({
+      message: err.message || 'Some error occurred while retrieving screenshots.',
     });
+  });
 };
 
 exports.findOne = (req, res) => {
@@ -111,6 +130,101 @@ exports.findOneImage = (req, res) => {
     }).catch((err) => res.status(500).send({
       message: `Error retrieving screenshot with id ${req.params.screenshotId} due to [${err}]`,
     }));
+};
+
+exports.compareImages = (req, res) => {
+  const errors = validationResult(req);
+  if (!errors.isEmpty()) {
+    return res.status(422).json({ errors: errors.array() });
+  }
+  // find both images
+  const promises = [
+    Screenshot.findById(req.params.screenshotId).exec(),
+    Screenshot.findById(req.params.screenshotCompareId).exec(),
+  ];
+
+  return Promise.all(promises).then((results) => {
+    const screenshot = results[0];
+    const screenshotCompare = results[1];
+    const options = {
+      // if there is more than 10% difference then just return it.
+      returnEarlyThreshold: 10,
+    };
+    compare(screenshot.path, screenshotCompare.path, options, (err, data) => {
+      if (err) {
+        return res.status(404).send({
+          message: 'Something went wrong comparing the images',
+        });
+      }
+      return res.status(200).send(
+        data,
+      );
+    });
+  }).catch((err) => {
+    res.status(500).send({
+      message: err.message || 'Some error occurred while creating the build.',
+    });
+  });
+};
+
+exports.compareImagesAndReturnImage = (req, res) => {
+  const errors = validationResult(req);
+  if (!errors.isEmpty()) {
+    return res.status(422).json({ errors: errors.array() });
+  }
+  // find both images
+  const promises = [
+    Screenshot.findById(req.params.screenshotId).exec(),
+    Screenshot.findById(req.params.screenshotCompareId).exec(),
+  ];
+
+  return Promise.all(promises).then((results) => {
+    const screenshot = results[0];
+    const screenshotCompare = results[1];
+
+    const options = {
+      output: {
+        errorColor: {
+          red: 255,
+          green: 0,
+          blue: 255,
+        },
+        errorType: 'movement',
+        transparency: 0.3,
+        largeImageThreshold: 1200,
+        useCrossOrigin: false,
+        outputDiff: true,
+      },
+      scaleToSameSize: true,
+      ignore: 'antialiasing',
+    };
+
+    const loadImagesPromises = [
+      fsPromises.readFile(screenshot.path),
+      fsPromises.readFile(screenshotCompare.path),
+    ];
+    return Promise.all(loadImagesPromises).then((imageLoadResults) => {
+      compareImages(
+        imageLoadResults[0],
+        imageLoadResults[1],
+        options,
+      ).then((data) => {
+        const tempFileName = `compares/${Date.now()}-compare.png`;
+        fsPromises.writeFile(path.resolve(tempFileName), data.getBuffer()).then(() => {
+          console.log(path.resolve(tempFileName));
+          return res.sendFile(path.resolve(tempFileName));
+        });
+      });
+    }).catch((err) => {
+      res.status(500).send({
+        message: err.message || 'Some error occurred loading the images',
+      });
+    });
+  }).catch((err) => {
+    res.status(500).send({
+      message: err.message || 'Some error occurred while creating the build.',
+    });
+  });
 };
 
 exports.update = (req, res) => {
